# agent-hub-mvp

./: .markdownlint.jsonc  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: ci.yml  ghcr-smoke.yml  publish.yml  readme-check.yml
agents/_smoke/: Dockerfile
agents/calculator/: Dockerfile  README.md  agent.yaml  pyproject.toml
agents/calculator/src/: a2a_server.py  app.py  mcp_server.py
agents/weather/: Dockerfile  README.md  agent.yaml  pyproject.toml
agents/weather/src/: a2a_server.py  app.py  mcp_server.py
docs/: a2a-spec.md  catalog.html  consume-a2a.md  consume-mcp.md  index.md  submit.md
schemas/: agent-card.schema.json  agent.schema.json
scripts/: check_a2a_runtime.py  detect_changed_agents.py  generate_catalog.py  require_agent_readme.py  validate_agent_card.py  validate_agent_manifest.py
templates/: PULL_REQUEST_TEMPLATE.md  README.md  agent.yaml
templates/python-agent/: Dockerfile  README.md  pyproject.toml
templates/python-agent/src/: a2a_server.py  app.py  mcp_server.py
